--- a/src/main/resources/templates/layout/partials/_header.html
+++ b/src/main/resources/templates/layout/partials/_header.html
@@ -1,21 +1,18 @@
 <!--begin::Header-->
 <div id="kt_app_header" class="app-header ">
 	<!--begin::Header container-->
-	<div
-		class="app-container  container-xxl d-flex align-items-stretch justify-content-between" id="kt_app_header_container">
+	<div class="app-container container-xxl d-flex align-items-stretch justify-content-between" id="kt_app_header_container">
 		<!--begin::Logo-->
-		<div
-			class="d-flex align-items-center flex-grow-1 flex-lg-grow-0 me-lg-15">
-			<a href="?page=index"> <img alt="Logo"
-				src="assets/media/logos/default-dark.svg"
-				class="h-20px h-lg-30px app-sidebar-logo-default" />
+		<div class="d-flex align-items-center flex-grow-1 flex-lg-grow-0 me-lg-15">
+			<a href="?page=index"> 
+				<img alt="Logo" th:src="@{assets/media/logos/diabetes-test.png}" src="default-dark.svg" class="h-20px h-lg-30px app-sidebar-logo-default" />
+				<span th:text="#{label.application_title}"></span>
 			</a>
 		</div>
 		<!--end::Logo-->
+		
 		<!--begin::Header wrapper-->
-		<div
-			class="d-flex align-items-stretch justify-content-between flex-lg-grow-1"
-			id="kt_app_header_wrapper">
+		<div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
 			<!--layout-partial:layout/partials/header/_menu/_menu.html-->
 			<div th:insert="~{layout/partials/header/_menu/_menu}"></div>
 			
@@ -23,7 +20,9 @@
 			<div th:insert="~{layout/partials/header/_navbar}"></div>
 		</div>
 		<!--end::Header wrapper-->
+		
 	</div>
 	<!--end::Header container-->
+	
 </div>
 <!--end::Header-->
