--- a/src/main/resources/templates/layout/_default.html
+++ b/src/main/resources/templates/layout/_default.html
@@ -7,6 +7,8 @@
 
 		<!--begin::Wrapper-->
 		<div class="app-wrapper  flex-column flex-row-fluid" id="kt_app_wrapper">
+			<div th:insert="~{layout/partials/_sidebar}" th:remove="tag"></div>
+		
 			<!--begin::Main-->
 			<div class="app-main flex-column flex-row-fluid" id="kt_app_main">
 				<!--begin::Content wrapper-->
