Gestione fragment tthymelafe Controller Template + logo pronti

--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" xmlns:th="http://www.thymeleaf.org">
+<html lang="it" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     
     <!--begin::Head-->
     <head>
@@ -10,16 +10,16 @@
         <meta name="keywords" content="keen, bootstrap, bootstrap 5, bootstrap 4, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="canonical" href="https://preview.keenthemes.com/keen"/>
-        <link rel="shortcut icon" th:href="@{assets/media/logos/diabetes-test.png}"/>
+        <link rel="shortcut icon" th:href="@{/assets/media/logos/app-icon.svg}"/>
         
         <!--begin::Fonts(mandatory for all pages)-->
         	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"/>        
         <!--end::Fonts-->
         
         <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
-       		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
-            <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+       		<link th:href="@{/assets/css/style.bundle.css}" rel="stylesheet" type="text/css"/>
+            <link th:href="@{/assets/plugins/global/plugins.bundle.css}" rel="stylesheet" type="text/css"/>
+            <link th:href="@{/assets/css/style.bundle.css}" rel="stylesheet" type="text/css" />
         <!--end::Global Stylesheets Bundle-->
     </head>
     <!--end::Head-->
@@ -52,8 +52,8 @@
        	<!--end::Javascript-->      
        	  
        	<!--begin::Global Javascript Bundle(mandatory for all pages)-->
-           <script src="assets/plugins/global/plugins.bundle.js" th:src="@{assets/plugins/global/plugins.bundle.js}"></script>
-           <script src="assets/js/scripts.bundle.js" th:src="@{assets/js/scripts.bundle.js}"></script>
+           <script th:src="@{/assets/plugins/global/plugins.bundle.js}"></script>
+           <script th:src="@{/assets/js/scripts.bundle.js}"></script>
       	<!--end::Global Javascript Bundle-->
     </body>
     <!--end::Body-->
