--- a/src/main/resources/templates/layout/partials/_sidebar.html
+++ b/src/main/resources/templates/layout/partials/_sidebar.html
@@ -1,12 +1,14 @@
 <!--begin::Sidebar-->
 <div id="kt_app_sidebar" class="app-sidebar flex-column" data-kt-drawer="true" data-kt-drawer-name="app-sidebar" data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="225px" data-kt-drawer-direction="start" data-kt-drawer-toggle="#kt_app_sidebar_mobile_toggle">
+
 	<!--begin::Logo-->
 	<div class="app-sidebar-logo px-6" id="kt_app_sidebar_logo">
 		<!--begin::Logo image-->
-		<a href="../../demo1/dist/index.html">
-			<img alt="Logo" src="assets/media/logos/default.svg" class="h-30px app-sidebar-logo-default theme-light-show" /> <img alt="Logo" src="assets/media/logos/default-dark.svg" class="h-30px app-sidebar-logo-default theme-dark-show" />
+		<a th:href="@{/home}">
+			<img alt="Logo" th:src="@{/assets/media/logos/app-logo.svg}" class="h-30px app-sidebar-logo-default theme-light-show" />
 		</a>
 		<!--end::Logo image-->
+
 		<!--begin::Sidebar toggle-->
 		<div id="kt_app_sidebar_toggle" class="app-sidebar-toggle btn btn-icon btn-sm h-30px w-30px rotate" data-kt-toggle="true" data-kt-toggle-state="active" data-kt-toggle-target="body" data-kt-toggle-name="app-sidebar-minimize">
 			<!--begin::Svg Icon | path: icons/duotune/arrows/arr079.svg-->
@@ -21,6 +23,7 @@
 		<!--end::Sidebar toggle-->
 	</div>
 	<!--end::Logo-->
+
 	<!--begin::sidebar menu-->
 	<div class="app-sidebar-menu overflow-hidden flex-column-fluid">
 		<!--begin::Menu wrapper-->
@@ -55,7 +58,7 @@
 							<!--begin:Menu item-->
 							<div class="menu-item">
 								<!--begin:Menu link-->
-								<a class="menu-link" href="../../demo1/dist/authentication/layouts/corporate/new-password.html">
+								<a class="menu-link" th:href="@{/visit/list}">
 									<span class="menu-bullet">
 										<span class="bullet bullet-dot"></span>
 									</span>
@@ -64,11 +67,11 @@
 								<!--end:Menu link-->
 							</div>
 							<!--end:Menu item-->
-							
+
 							<!--begin:Menu item-->
 							<div class="menu-item">
 								<!--begin:Menu link-->
-								<a class="menu-link" href="../../demo1/dist/authentication/extended/multi-steps-sign-up.html">
+								<a class="menu-link" th:href="@{/visit/new}">
 									<span class="menu-bullet">
 										<span class="bullet bullet-dot"></span>
 									</span>
@@ -83,6 +86,7 @@
 					<!--end:Menu sub-->
 				</div>
 				<!--end:Menu item-->
+
 				<!--begin:Menu item-->
 				<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
 					<!--begin:Menu link-->
@@ -91,9 +95,9 @@
 							<!--begin::Svg Icon | path: icons/duotune/communication/com005.svg-->
 							<span class="svg-icon svg-icon-2">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<path d="M20 14H18V10H20C20.6 10 21 10.4 21 11V13C21 13.6 20.6 14 20 14ZM21 19V17C21 16.4 20.6 16 20 16H18V20H20C20.6 20 21 19.6 21 19ZM21 7V5C21 4.4 20.6 4 20 4H18V8H20C20.6 8 21 7.6 21 7Z" fill="currentColor" />
-														<path opacity="0.3" d="M17 22H3C2.4 22 2 21.6 2 21V3C2 2.4 2.4 2 3 2H17C17.6 2 18 2.4 18 3V21C18 21.6 17.6 22 17 22ZM10 7C8.9 7 8 7.9 8 9C8 10.1 8.9 11 10 11C11.1 11 12 10.1 12 9C12 7.9 11.1 7 10 7ZM13.3 16C14 16 14.5 15.3 14.3 14.7C13.7 13.2 12 12 10.1 12C8.10001 12 6.49999 13.1 5.89999 14.7C5.59999 15.3 6.19999 16 7.39999 16H13.3Z" fill="currentColor" />
-													</svg>
+									<path d="M20 14H18V10H20C20.6 10 21 10.4 21 11V13C21 13.6 20.6 14 20 14ZM21 19V17C21 16.4 20.6 16 20 16H18V20H20C20.6 20 21 19.6 21 19ZM21 7V5C21 4.4 20.6 4 20 4H18V8H20C20.6 8 21 7.6 21 7Z" fill="currentColor" />
+									<path opacity="0.3" d="M17 22H3C2.4 22 2 21.6 2 21V3C2 2.4 2.4 2 3 2H17C17.6 2 18 2.4 18 3V21C18 21.6 17.6 22 17 22ZM10 7C8.9 7 8 7.9 8 9C8 10.1 8.9 11 10 11C11.1 11 12 10.1 12 9C12 7.9 11.1 7 10 7ZM13.3 16C14 16 14.5 15.3 14.3 14.7C13.7 13.2 12 12 10.1 12C8.10001 12 6.49999 13.1 5.89999 14.7C5.59999 15.3 6.19999 16 7.39999 16H13.3Z" fill="currentColor" />
+								</svg>
 							</span>
 							<!--end::Svg Icon-->
 						</span>
@@ -108,7 +112,7 @@
 							<!--begin:Menu item-->
 							<div class="menu-item">
 								<!--begin:Menu link-->
-								<a class="menu-link" href="../../demo1/dist/authentication/layouts/corporate/new-password.html">
+								<a class="menu-link" th:href="@{/patient/list}">
 									<span class="menu-bullet">
 										<span class="bullet bullet-dot"></span>
 									</span>
@@ -117,11 +121,11 @@
 								<!--end:Menu link-->
 							</div>
 							<!--end:Menu item-->
-							
+
 							<!--begin:Menu item-->
 							<div class="menu-item">
 								<!--begin:Menu link-->
-								<a class="menu-link" href="../../demo1/dist/authentication/extended/multi-steps-sign-up.html">
+								<a class="menu-link" th:href="@{/patient/new}">
 									<span class="menu-bullet">
 										<span class="bullet bullet-dot"></span>
 									</span>
@@ -136,6 +140,7 @@
 					<!--end:Menu sub-->
 				</div>
 				<!--end:Menu item-->
+
 				<!--begin:Menu item-->
 				<div data-kt-menu-trigger="click" class="menu-item menu-accordion">
 					<!--begin:Menu link-->
@@ -144,9 +149,9 @@
 							<!--begin::Svg Icon | path: icons/duotune/communication/com013.svg-->
 							<span class="svg-icon svg-icon-2">
 								<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<path d="M6.28548 15.0861C7.34369 13.1814 9.35142 12 11.5304 12H12.4696C14.6486 12 16.6563 13.1814 17.7145 15.0861L19.3493 18.0287C20.0899 19.3618 19.1259 21 17.601 21H6.39903C4.87406 21 3.91012 19.3618 4.65071 18.0287L6.28548 15.0861Z" fill="currentColor" />
-														<rect opacity="0.3" x="8" y="3" width="8" height="8" rx="4" fill="currentColor" />
-													</svg>
+									<path d="M6.28548 15.0861C7.34369 13.1814 9.35142 12 11.5304 12H12.4696C14.6486 12 16.6563 13.1814 17.7145 15.0861L19.3493 18.0287C20.0899 19.3618 19.1259 21 17.601 21H6.39903C4.87406 21 3.91012 19.3618 4.65071 18.0287L6.28548 15.0861Z" fill="currentColor" />
+									<rect opacity="0.3" x="8" y="3" width="8" height="8" rx="4" fill="currentColor" />
+								</svg>
 							</span>
 							<!--end::Svg Icon-->
 						</span>
@@ -154,6 +159,7 @@
 						<span class="menu-arrow"></span>
 					</span>
 					<!--end:Menu link-->
+					
 					<!--begin:Menu sub-->
 					<div class="menu-sub menu-sub-accordion">
 						<!--begin:Menu item-->
@@ -161,7 +167,7 @@
 							<!--begin:Menu item-->
 							<div class="menu-item">
 								<!--begin:Menu link-->
-								<a class="menu-link" href="../../demo1/dist/authentication/layouts/corporate/new-password.html">
+								<a class="menu-link" th:href="@{/doctor/list}">
 									<span class="menu-bullet">
 										<span class="bullet bullet-dot"></span>
 									</span>
@@ -170,11 +176,11 @@
 								<!--end:Menu link-->
 							</div>
 							<!--end:Menu item-->
-							
+
 							<!--begin:Menu item-->
 							<div class="menu-item">
 								<!--begin:Menu link-->
-								<a class="menu-link" href="../../demo1/dist/authentication/extended/multi-steps-sign-up.html">
+								<a class="menu-link" th:href="@{/doctor/new}">
 									<span class="menu-bullet">
 										<span class="bullet bullet-dot"></span>
 									</span>
@@ -187,9 +193,9 @@
 						<!--end:Menu item-->
 					</div>
 					<!--end:Menu sub-->
-					
 				</div>
 				<!--end:Menu item-->
+
 			</div>
 			<!--end::Menu-->
 		</div>
