--- a/src/main/resources/templates/layout/partials/_toolbar.html
+++ b/src/main/resources/templates/layout/partials/_toolbar.html
@@ -16,12 +16,16 @@
 					<option value="Twitter">Facebook Campaign</option>
 					<option value="Twitter">Adword Campaign</option>
 					<option value="Twitter">Carbon Campaign</option>
-				</select> <a href="#" class="btn btn-icon btn-sm btn-success flex-shrink-0 ms-4" data-bs-toggle="modal" data-bs-target="#kt_modal_create_campaign"> <!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg--> <span class="svg-icon svg-icon-2">
+				</select>
+				<a href="#" class="btn btn-icon btn-sm btn-success flex-shrink-0 ms-4" data-bs-toggle="modal" data-bs-target="#kt_modal_create_campaign">
+					<!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg-->
+					<span class="svg-icon svg-icon-2">
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1" transform="rotate(-90 11.364 20.364)" fill="currentColor" />
-<rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="currentColor" />
-</svg>
-					</span> <!--end::Svg Icon-->
+							<rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1" transform="rotate(-90 11.364 20.364)" fill="currentColor" />
+							<rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="currentColor" />
+						</svg>
+					</span>
+					<!--end::Svg Icon-->
 				</a>
 			</div>
 			<!--end::Filter menu-->
