--- a/src/main/resources/templates/partials/menus/_user-account-menu.html
+++ b/src/main/resources/templates/partials/menus/_user-account-menu.html
@@ -5,7 +5,7 @@
 		<div class="menu-content d-flex align-items-center px-3">
 			<!--begin::Avatar-->
 			<div class="symbol symbol-50px me-5">
-				<img alt="Logo" src="assets/media/avatars/300-3.jpg" />
+				<img alt="Logo" th:src="@{/assets/media/avatars/300-3.jpg}" />
 			</div>
 			<!--end::Avatar-->
 			<!--begin::Username-->
@@ -91,7 +91,7 @@
 		<a href="#" class="menu-link px-5"> <span class="menu-title position-relative">
 				Language
 				<span class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">
-					English <img class="w-15px h-15px rounded-1 ms-2" src="assets/media/flags/united-states.svg" alt="" />
+					English <img class="w-15px h-15px rounded-1 ms-2" th:src="@{/assets/media/flags/united-states.svg}" alt="" />
 				</span>
 			</span>
 		</a>
@@ -100,7 +100,7 @@
 			<!--begin::Menu item-->
 			<div class="menu-item px-3">
 				<a href="?page=account/settings" class="menu-link d-flex px-5 active"> <span class="symbol symbol-20px me-4">
-						<img class="rounded-1" src="assets/media/flags/united-states.svg" alt="" />
+						<img class="rounded-1" th:src="@{/assets/media/flags/united-states.svg}" alt="" />
 					</span> English
 				</a>
 			</div>
@@ -108,7 +108,7 @@
 			<!--begin::Menu item-->
 			<div class="menu-item px-3">
 				<a href="?page=account/settings" class="menu-link d-flex px-5"> <span class="symbol symbol-20px me-4">
-						<img class="rounded-1" src="assets/media/flags/spain.svg" alt="" />
+						<img class="rounded-1" th:src="@{/assets/media/flags/spain.svg}" alt="" />
 					</span> Spanish
 				</a>
 			</div>
@@ -116,7 +116,7 @@
 			<!--begin::Menu item-->
 			<div class="menu-item px-3">
 				<a href="?page=account/settings" class="menu-link d-flex px-5"> <span class="symbol symbol-20px me-4">
-						<img class="rounded-1" src="assets/media/flags/germany.svg" alt="" />
+						<img class="rounded-1" th:src="@{/assets/media/flags/germany.svg}" alt="" />
 					</span> German
 				</a>
 			</div>
@@ -124,7 +124,7 @@
 			<!--begin::Menu item-->
 			<div class="menu-item px-3">
 				<a href="?page=account/settings" class="menu-link d-flex px-5"> <span class="symbol symbol-20px me-4">
-						<img class="rounded-1" src="assets/media/flags/japan.svg" alt="" />
+						<img class="rounded-1" th:src="@{/assets/media/flags/japan.svg}" alt="" />
 					</span> Japanese
 				</a>
 			</div>
@@ -132,7 +132,7 @@
 			<!--begin::Menu item-->
 			<div class="menu-item px-3">
 				<a href="?page=account/settings" class="menu-link d-flex px-5"> <span class="symbol symbol-20px me-4">
-						<img class="rounded-1" src="assets/media/flags/france.svg" alt="" />
+						<img class="rounded-1" th:src="@{/assets/media/flags/france.svg}" alt="" />
 					</span> French
 				</a>
 			</div>
